<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.febac.cervas.ResultActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:paddingTop="12dp"
            android:layout_gravity="center"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sub_titulo_resultado"
            android:textStyle="bold"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instrucao_resultado"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />

        <LinearLayout android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/ordem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:text="@string/recipiente"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="right"
                android:text="@string/custo_ml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_result">
            </ListView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>