<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.edu.febac.cervas.AboutActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="12dp"
                android:text="@string/descricao"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/texto_descricao"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="12dp"
                android:text="@string/desenvolvedores"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="@string/texto_desenvolvedores"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/si" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/febac" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="12dp"
                android:text="@string/contatos"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="gesielrios@gmail.com"
                android:textSize="14sp"
                android:autoLink="email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="appfebac@gmail.com"
                android:textSize="14sp"
                android:autoLink="email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="12dp"
                android:text="http://www.febac.edu.br"
                android:textSize="14sp"
                android:autoLink="web" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>